RocketShip Changelog

05-02-2015

    - Removed Primitives, more annoying than anything

03-29-2015

    - Moved partials to global view directory
    - Changed View class was adjusted for the new partials directory
    - Added Authentication level validation (assureLevel)
    - Update the cli template for the generate tool (now gives out more help)
    - Primitive Object Types now RTM
    - Upgrade version to 1.2.0

03-12-2015

    - Removed Validation class, replaced by Respect\Validation instead (way more powerful)
    - Fixed issues with number values of the Geocoder class
    - Updated the Guzzle library

03-11-2015 #2

    - Primitive Object Types BETA 4
    - Added ArrayAccess interface implementation to Collection (now object can be used with the standard array syntax)
    - Added Countable interface implementation to Collection (now you can also get count by using the standard count php method)
    - Added JsonSerializable interface implementation to Collection (now can easily be encoded to json without any change to your code)
    - Refactored 'count' method to 'length' in Collection
    - Added Authentication class (supporting authentication, creation, permission level checking)
    - Added missing init call to model construct method (method is required but was never called)

03-11-2015

    - Primitive Object Types BETA 3
    - Fixed issue with rendering to JSON with Primitive Objects, now down casts everything back to php native
    - Changed processing order for toRaw (numeric before string)
    - Fixed limit method to downcast Primitive Objects
    - Fixed potential issue with the MongoId casting in when updating a record
    - Added 'en' as default locale in Application for when potential "empty property" error comes up

03-10-2015

    - Primitive Object Types BETA 2
    - Fixed HTML Helper bugs related to bugs with the Primitive Objects
    - Fixed bug with site_url in app that was not set correctly